#add_subdirectory(adapters)
add_subdirectory(concepts)
add_subdirectory(textures)
if(WIN32)
    add_subdirectory(win32)
endif(WIN32)

target_sources(MorpheusCore
    PUBLIC
        adapter.hpp
        video_mode.hpp
        pixel.hpp
        render_system_factory.hpp
        render_system.hpp
        render_target.hpp
        render_window.hpp
    PRIVATE
        adapter.cpp
        render_system_factory.cpp
        render_system.cpp
        render_target.cpp
        render_window.cpp
        video_mode.cpp
)